--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+*.bak
+*.log
+*.tpl.php
+Thumbs.db
+desktop.ini
+.DS_Store
+.buildpath
+.project
+.settings
+vendor
 composer.lock
-vendor/
+/node_modules
+/bk
